# Project4_django

./: .env_sample  .flake8  .gitignore  pyproject.toml
config/: settings.py  urls.py
mailings/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailings/management/commands/: send_message.py
mailings/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
mailings/templates/: add_mailing.html  home.html  mailing_confirm_delete.html  mailing_detail.html  mailing_list.html  mailing_statistics.html
message/: admin.py  forms.py  models.py  urls.py  views.py
message/migrations/: 0001_initial.py  0002_initial.py
message/templates/: add_message.html  base.html  message_confirm_delete.html  message_detail.html  message_list.html
recipient/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
recipient/migrations/: 0001_initial.py  0002_initial.py
recipient/templates/: add_recipient.html  base.html  recipient_confirm_delete.html  recipient_detail.html  recipient_list.html
recipient/templates/includes/: inc_menu.html
recipient/templatetags/: my_tags.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: create_manager_group.py  csu.py
users/migrations/: 0001_initial.py
users/templates/: login.html
users/templates/users/: password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_request.html  user_form.html  users_list.html
