[tool.poetry]
name = "project3-django"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
django = "^5.1.7"
psycopg2-binary = "^2.9.10"
pillow = "^11.1.0"
python-dotenv = "^1.0.1"
redis = "^5.2.1"
shell = "^1.0.1"
black = "^25.1.0"
flake8 = "^7.3.0"
isort = "^6.0.1"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"